logs/offboard_pkg/build.make.302.log.stderr
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp: In member function ‘bool MultiBody::FlightLine()’:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp:202:23: error: ‘get_lla_line’ was not declared in this scope
  202 |                 lla = get_lla_line(lla_lead0, yaw_d);
      |                       ^~~~~~~~~~~~
make[2]: *** [CMakeFiles/offboard_pkg_node.dir/build.make:89: CMakeFiles/offboard_pkg_node.dir/src/MultiBody.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.cpp: In member function ‘mavros_msgs::GlobalPositionTarget TaskManager::get_lla_line(Eigen::Vector3d&, double)’:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.cpp:126:8: error: ‘change_yaw’ was not declared in this scope
  126 |     if(change_yaw && i!=1)
      |        ^~~~~~~~~~
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.cpp:126:22: error: ‘i’ was not declared in this scope
  126 |     if(change_yaw && i!=1)
      |                      ^
make[2]: *** [CMakeFiles/offboard_pkg_node.dir/build.make:76: CMakeFiles/offboard_pkg_node.dir/src/TaskManager.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:399: CMakeFiles/offboard_pkg_node.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
